k8s/db.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: imjacinta
spec:
  ports:
    - port: 5432
  selector:
    app: imjacinta
    tier: db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: imjacinta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imjacinta
      tier: db
  template:
    metadata:
      name: db
      labels:
        app: imjacinta
        tier: db
    spec:
      volumes:
      - name: db-vol
        persistentVolumeClaim:
          claimName: db-volclaim
      containers:
      - name: db
        image: postgres:9.6-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: db-vol
