k8s/web.yml
apiVersion: v1
kind: Service
metadata:
  name: imjacinta-web
  labels:
    app: imjacinta
spec:
  ports: 
    - port: 3000
  selector:
    app: imjacinta
    tier: app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: imjacinta-web
  labels:
    app: imjacinta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imjacinta
      tier: app
  template:
    metadata:
      name: imjacinta-web
      labels:
        app: imjacinta
        tier: app
    spec:
      containers:
      - name: imjacinta-web
        image: jaci/imjacinta:2019.3.20
        command: [bundle, exec, rails, s, -p, "3000", -b, "0.0.0.0"]
        ports:
        - containerPort: 3000
